backend/app/nlp/CompiledFiles/CaloriesAssistantParser.py
# Generated from CaloriesAssistant.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CaloriesAssistantParser ( Parser ):

    grammarFileName = "CaloriesAssistant.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':'", "','", 
                     "'('", "')'", "'-'", "'/'", "'.'" ]

    symbolicNames = [ "<INVALID>", "UNDO_SCOPE", "STRING", "FOOD_ID", "EX_ID", 
                      "F_SCOPE", "X_SCOPE", "SHOW", "SET", "EDIT", "ADD", 
                      "DELETE", "UNDO", "MOVE", "TO", "ITEM", "BREAKFAST", 
                      "LUNCH", "DINNER", "SNACK", "EAT", "DRINK", "EXERCISE", 
                      "RUN", "WALK", "CYCLING", "SWIM", "PLANK", "DO", "PUSHUPS", 
                      "SQUATS", "LUNGES", "SUMMARY", "TODAY", "WEEKLY", 
                      "STATS", "THIS", "WEEK", "DATE", "WEIGHT", "HEIGHT", 
                      "AGE", "GENDER", "GOAL", "ACTIVITY", "LEVEL", "GENDER_TYPE", 
                      "GOAL_TYPE", "ACTIVITY_LEVEL", "INTENSITY_LEVEL", 
                      "MIN", "KM", "KG", "CM", "UNIT", "COLON", "COMMA", 
                      "LPAREN", "RPAREN", "DASH", "SLASH", "DOT", "INT", 
                      "WORD", "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_line = 1
    RULE_command = 2
    RULE_foodCommand = 3
    RULE_foodLog = 4
    RULE_foodLogBody = 5
    RULE_foodEdit = 6
    RULE_foodAddToEntry = 7
    RULE_foodMove = 8
    RULE_foodDelete = 9
    RULE_foodEntryId = 10
    RULE_foodItems = 11
    RULE_foodItem = 12
    RULE_quantity = 13
    RULE_unit = 14
    RULE_foodName = 15
    RULE_nameAtom = 16
    RULE_note = 17
    RULE_noteText = 18
    RULE_mealLabel = 19
    RULE_actionLabel = 20
    RULE_exerciseCommandTop = 21
    RULE_exerciseLog = 22
    RULE_exerciseEdit = 23
    RULE_exerciseEditItem = 24
    RULE_exerciseAddToEntry = 25
    RULE_exerciseDelete = 26
    RULE_exerciseEntryId = 27
    RULE_exerciseItems = 28
    RULE_exerciseItem = 29
    RULE_runItem = 30
    RULE_walkItem = 31
    RULE_cyclingItem = 32
    RULE_swimItem = 33
    RULE_plankItem = 34
    RULE_doItem = 35
    RULE_duration = 36
    RULE_distance = 37
    RULE_countableExercise = 38
    RULE_intensityLevel = 39
    RULE_undoCommand = 40
    RULE_statsCommand = 41
    RULE_summaryToday = 42
    RULE_summaryDate = 43
    RULE_weeklyStats = 44
    RULE_statsThisWeek = 45
    RULE_profileCommand = 46
    RULE_setWeight = 47
    RULE_setHeight = 48
    RULE_setAge = 49
    RULE_setGender = 50
    RULE_setGoal = 51
    RULE_setActivity = 52

    ruleNames =  [ "program", "line", "command", "foodCommand", "foodLog", 
                   "foodLogBody", "foodEdit", "foodAddToEntry", "foodMove", 
                   "foodDelete", "foodEntryId", "foodItems", "foodItem", 
                   "quantity", "unit", "foodName", "nameAtom", "note", "noteText", 
                   "mealLabel", "actionLabel", "exerciseCommandTop", "exerciseLog", 
                   "exerciseEdit", "exerciseEditItem", "exerciseAddToEntry", 
                   "exerciseDelete", "exerciseEntryId", "exerciseItems", 
                   "exerciseItem", "runItem", "walkItem", "cyclingItem", 
                   "swimItem", "plankItem", "doItem", "duration", "distance", 
                   "countableExercise", "intensityLevel", "undoCommand", 
                   "statsCommand", "summaryToday", "summaryDate", "weeklyStats", 
                   "statsThisWeek", "profileCommand", "setWeight", "setHeight", 
                   "setAge", "setGender", "setGoal", "setActivity" ]

    EOF = Token.EOF
    UNDO_SCOPE=1
    STRING=2
    FOOD_ID=3
    EX_ID=4
    F_SCOPE=5
    X_SCOPE=6
    SHOW=7
    SET=8
    EDIT=9
    ADD=10
    DELETE=11
    UNDO=12
    MOVE=13
    TO=14
    ITEM=15
    BREAKFAST=16
    LUNCH=17
    DINNER=18
    SNACK=19
    EAT=20
    DRINK=21
    EXERCISE=22
    RUN=23
    WALK=24
    CYCLING=25
    SWIM=26
    PLANK=27
    DO=28
    PUSHUPS=29
    SQUATS=30
    LUNGES=31
    SUMMARY=32
    TODAY=33
    WEEKLY=34
    STATS=35
    THIS=36
    WEEK=37
    DATE=38
    WEIGHT=39
    HEIGHT=40
    AGE=41
    GENDER=42
    GOAL=43
    ACTIVITY=44
    LEVEL=45
    GENDER_TYPE=46
    GOAL_TYPE=47
    ACTIVITY_LEVEL=48
    INTENSITY_LEVEL=49
    MIN=50
    KM=51
    KG=52
    CM=53
    UNIT=54
    COLON=55
    COMMA=56
    LPAREN=57
    RPAREN=58
    DASH=59
    SLASH=60
    DOT=61
    INT=62
    WORD=63
    NEWLINE=64
    WS=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CaloriesAssistantParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CaloriesAssistantParser.LineContext)
            else:
                return self.getTypedRuleContext(CaloriesAssistantParser.LineContext,i)


        def getRuleIndex(self):
            return CaloriesAssistantParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CaloriesAssistantParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 7)) & ~0x3f) == 0 and ((1 << (_la - 7)) & ((1 << (CaloriesAssistantParser.SHOW - 7)) | (1 << (CaloriesAssistantParser.SET - 7)) | (1 << (CaloriesAssistantParser.EDIT - 7)) | (1 << (CaloriesAssistantParser.ADD - 7)) | (1 << (CaloriesAssistantParser.DELETE - 7)) | (1 << (CaloriesAssistantParser.UNDO - 7)) | (1 << (CaloriesAssistantParser.MOVE - 7)) | (1 << (CaloriesAssistantParser.BREAKFAST - 7)) | (1 << (CaloriesAssistantParser.LUNCH - 7)) | (1 << (CaloriesAssistantParser.DINNER - 7)) | (1 << (CaloriesAssistantParser.SNACK - 7)) | (1 << (CaloriesAssistantParser.EAT - 7)) | (1 << (CaloriesAssistantParser.DRINK - 7)) | (1 << (CaloriesAssistantParser.EXERCISE - 7)) | (1 << (CaloriesAssistantParser.COLON - 7)) | (1 << (CaloriesAssistantParser.NEWLINE - 7)))) != 0):
                self.state = 106
                self.line()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(CaloriesAssistantParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.CommandContext,0)


        def EOF(self):
            return self.getToken(CaloriesAssistantParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CaloriesAssistantParser.NEWLINE)
            else:
                return self.getToken(CaloriesAssistantParser.NEWLINE, i)

        def getRuleIndex(self):
            return CaloriesAssistantParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = CaloriesAssistantParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CaloriesAssistantParser.SHOW, CaloriesAssistantParser.SET, CaloriesAssistantParser.EDIT, CaloriesAssistantParser.ADD, CaloriesAssistantParser.DELETE, CaloriesAssistantParser.UNDO, CaloriesAssistantParser.MOVE, CaloriesAssistantParser.BREAKFAST, CaloriesAssistantParser.LUNCH, CaloriesAssistantParser.DINNER, CaloriesAssistantParser.SNACK, CaloriesAssistantParser.EAT, CaloriesAssistantParser.DRINK, CaloriesAssistantParser.EXERCISE, CaloriesAssistantParser.COLON]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.command()
                self.state = 121
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CaloriesAssistantParser.NEWLINE]:
                    self.state = 116 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 115
                            self.match(CaloriesAssistantParser.NEWLINE)

                        else:
                            raise NoViableAltException(self)
                        self.state = 118 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                    pass
                elif token in [CaloriesAssistantParser.EOF]:
                    self.state = 120
                    self.match(CaloriesAssistantParser.EOF)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [CaloriesAssistantParser.NEWLINE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 123
                        self.match(CaloriesAssistantParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 126 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def foodCommand(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodCommandContext,0)


        def exerciseCommandTop(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.ExerciseCommandTopContext,0)


        def statsCommand(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.StatsCommandContext,0)


        def profileCommand(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.ProfileCommandContext,0)


        def undoCommand(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.UndoCommandContext,0)


        def getRuleIndex(self):
            return CaloriesAssistantParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = CaloriesAssistantParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.foodCommand()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.exerciseCommandTop()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.statsCommand()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 133
                self.profileCommand()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 134
                self.undoCommand()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FoodCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def foodLog(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodLogContext,0)


        def foodEdit(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodEditContext,0)


        def foodAddToEntry(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodAddToEntryContext,0)


        def foodMove(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodMoveContext,0)


        def foodDelete(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodDeleteContext,0)


        def getRuleIndex(self):
            return CaloriesAssistantParser.RULE_foodCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFoodCommand" ):
                listener.enterFoodCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFoodCommand" ):
                listener.exitFoodCommand(self)




    def foodCommand(self):

        localctx = CaloriesAssistantParser.FoodCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_foodCommand)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CaloriesAssistantParser.BREAKFAST, CaloriesAssistantParser.LUNCH, CaloriesAssistantParser.DINNER, CaloriesAssistantParser.SNACK, CaloriesAssistantParser.EAT, CaloriesAssistantParser.DRINK, CaloriesAssistantParser.COLON]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.foodLog()
                pass
            elif token in [CaloriesAssistantParser.EDIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.foodEdit()
                pass
            elif token in [CaloriesAssistantParser.ADD]:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.foodAddToEntry()
                pass
            elif token in [CaloriesAssistantParser.MOVE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 140
                self.foodMove()
                pass
            elif token in [CaloriesAssistantParser.DELETE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 141
                self.foodDelete()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FoodLogContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def foodLogBody(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodLogBodyContext,0)


        def getRuleIndex(self):
            return CaloriesAssistantParser.RULE_foodLog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFoodLog" ):
                listener.enterFoodLog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFoodLog" ):
                listener.exitFoodLog(self)




    def foodLog(self):

        localctx = CaloriesAssistantParser.FoodLogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_foodLog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.foodLogBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FoodLogBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(CaloriesAssistantParser.COLON, 0)

        def foodItems(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodItemsContext,0)


        def mealLabel(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.MealLabelContext,0)


        def actionLabel(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.ActionLabelContext,0)


        def getRuleIndex(self):
            return CaloriesAssistantParser.RULE_foodLogBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFoodLogBody" ):
                listener.enterFoodLogBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFoodLogBody" ):
                listener.exitFoodLogBody(self)




    def foodLogBody(self):

        localctx = CaloriesAssistantParser.FoodLogBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_foodLogBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CaloriesAssistantParser.BREAKFAST) | (1 << CaloriesAssistantParser.LUNCH) | (1 << CaloriesAssistantParser.DINNER) | (1 << CaloriesAssistantParser.SNACK))) != 0):
                self.state = 146
                self.mealLabel()


            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CaloriesAssistantParser.EAT or _la==CaloriesAssistantParser.DRINK:
                self.state = 149
                self.actionLabel()


            self.state = 152
            self.match(CaloriesAssistantParser.COLON)
            self.state = 153
            self.foodItems()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FoodEditContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EDIT(self):
            return self.getToken(CaloriesAssistantParser.EDIT, 0)

        def foodEntryId(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodEntryIdContext,0)


        def COLON(self):
            return self.getToken(CaloriesAssistantParser.COLON, 0)

        def foodLogBody(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodLogBodyContext,0)


        def getRuleIndex(self):
            return CaloriesAssistantParser.RULE_foodEdit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFoodEdit" ):
                listener.enterFoodEdit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFoodEdit" ):
                listener.exitFoodEdit(self)




    def foodEdit(self):

        localctx = CaloriesAssistantParser.FoodEditContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_foodEdit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(CaloriesAssistantParser.EDIT)
            self.state = 156
            self.foodEntryId()
            self.state = 157
            self.match(CaloriesAssistantParser.COLON)
            self.state = 158
            self.foodLogBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FoodAddToEntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(CaloriesAssistantParser.ADD, 0)

        def foodEntryId(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodEntryIdContext,0)


        def COLON(self):
            return self.getToken(CaloriesAssistantParser.COLON, 0)

        def foodItems(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodItemsContext,0)


        def getRuleIndex(self):
            return CaloriesAssistantParser.RULE_foodAddToEntry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFoodAddToEntry" ):
                listener.enterFoodAddToEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFoodAddToEntry" ):
                listener.exitFoodAddToEntry(self)




    def foodAddToEntry(self):

        localctx = CaloriesAssistantParser.FoodAddToEntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_foodAddToEntry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(CaloriesAssistantParser.ADD)
            self.state = 161
            self.foodEntryId()
            self.state = 162
            self.match(CaloriesAssistantParser.COLON)
            self.state = 163
            self.foodItems()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FoodMoveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOVE(self):
            return self.getToken(CaloriesAssistantParser.MOVE, 0)

        def foodEntryId(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.FoodEntryIdContext,0)


        def TO(self):
            return self.getToken(CaloriesAssistantParser.TO, 0)

        def mealLabel(self):
            return self.getTypedRuleContext(CaloriesAssistantParser.MealLabelContext,0)


        def getRuleIndex(self):
            return CaloriesAssistantParser.RULE_foodMove

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFoodMove" ):
                listener.enterFoodMove(self)
